--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -11,9 +11,9 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: lazy
+            anonymous: true
             
-            form_login:
+            json_login:
                 check_path: home.index
                 
             logout:
