--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -10,11 +10,12 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
-            anonymous: true
-            
+        main: 
+            anonymous: ~
             json_login:
-                check_path: home.index
+                check_path: app.login
+                username_path: email
+                password_path: password
                 
             logout:
                 path: /logout
