correction apportée aux differentes pages

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -43,5 +43,5 @@ security:
 
     encoders:
         App\Entity\Users: 
-                algorithm: bcrypt
-                cost: 12
+                algorithm: auto
+                
